2009-08-22  Doug Evans  <dje@sebabeach.org>

	* NEWS: Copy over entries from 1.1 branch.

2009-08-20  Doug Evans  <dje@sebabeach.org>

	* gas-test.scm (<keyword> test-data): Catch invalid requests,
	flag a warning and compensate.
	(<hw-address test-data): Tweak for readability.
	(<hw-iaddress test-data): Ditto.
	(cgen-build.sh): Convert symbols to strings before passing to
	string-append.
	(cgen-allinsn.exp): Ditto.

	* doc/pmacros.texi (.splice): Add more text.

2009-08-19  Doug Evans  <dje@sebabeach.org>

	* configure.in (AM_INIT_AUTOMAKE): Change version to 1.1.50 to
	distinguish from 1.1.
	* configure: Regenerate.
	* read.scm (-CGEN-VERSION): Update.
	* doc/version.texi: Update.

	New builtin .pmacro?.
	* pmacros.scm (-pmacro-builtin-pmacro?): New function.
	(pmacros-init!): Add .pmacro?.
	* doc/pmacros.text: Document .pmacro?.
	* testsuite/pmacros-1.test: Test .pmacro?.

	* pmacros.scm (scan-list1): Reorganize tracing so that the tracing
	of a pmacro begins before its arguments are evaluated, improves
	readability.

	* pmacros.scm (.sll, .srl, .sra): Fix thinko.
	* testsuite/pmacros-1.test: Ditto.  Add better tests.

	* doc/rtl.texi (Instructions): Improve docs of when ${...} is needed
	in assembler syntax.
	(Operands): Similarly.

2009-08-18  Doug Evans  <dje@sebabeach.org>

	* ifield.scm (ifld-encode-mode): Add FIXME.
	* opcodes.scm (<ifield> gen-insert): Handle encode parameters with
	modes.
	(<ifield> gen-extract): Similarly.

	* read.scm (parse-error): Handle #f for context-location.
	* utils-cgen.scm (unspecified-location): Fix building of
	single-location.

	* doc/rtl.texi: Document how to write hex and boolean values.

	* gas-test.scm (<hw-asm> test-data): Handle () values.
	(<keyword> test-data): Convert symbols to strings before passing
	to string-append.
	(<hw-index> test-data): Enumerate all cases.  Emit correctly sized
	result for scalars.

	* operand.scm (hw-index-scalar): Set `name'.
	(hw-index-anyof, hw-index-derived): Ditto.
